@@ -13,6 +13,8 @@ The common Sqitch guides are:
 
   changes             Specifying changes for Sqitch
   configuration       Hierarchical engine and target configuration
+  environment         Environment variables
+  passwords           Specifying target passwords
   tutorial            PostgreSQL Tutorial
   tutorial-firebird   Firebird Tutorial
   tutorial-mysql      MySQL Tutorial
