@@ -18,6 +18,7 @@ Revision history for Perl extension App::Sqitch
      - Target passwords can now be set via a single environment variable,
        `$SQITCH_PASSWORD`, in addition to existing target-specific environment
        variables.
+     - Added the sqitch-passwords and sqitch-environment guides.
 
 0.998  2015-01-15T22:17:44Z
      - Fixed a bug in `sqitch engine update-config` where it would add data to
